--- a/look-core/product_items.html
+++ b/look-core/product_items.html
@@ -4,7 +4,7 @@
             <img src="[THUMBNAIL]" alt="[name]" class="img-responsive" />
         </a>
         <!--START: quickview-->
-        <button class="quickview" data-toggle="modal">Quick View</button>
+        <button class="quickview" data-toggle="modal">[product_quick-view]</button>
         <!--END: quickview-->
     </div>
     <div class="name">
@@ -40,7 +40,7 @@
         <span class="freeshipping">[freeshipping]</span>
         <!--END: freeshippingblock-->
     </div>
-
+	<!--START: addtocart-->
     <div class="action">
         <a href="add_cart.asp?quick=1&amp;item_id=[catalogid]" class="add-to-cart btn btn-default">
             <span class="buyitlink-text">[category_buyitlink]</span>
@@ -48,4 +48,5 @@
             <span class="ajaxcart-added icon-ok"></span>
         </a>
     </div>
+    <!--END: addtocart-->
 </div>
