--- a/look-core/frame.html
+++ b/look-core/frame.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>[TITLE]</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2, user-scalable=yes">
     [META]
 
     <!--START: FRAME_RSSFEEDS -->
@@ -24,7 +24,7 @@
 
 </head>
 <body class="[body_class]" data-currency="[currency_symbol]" data-decimal="[decimal_places]">
-    
+    <div id="skip"><a href="#page-content">Skip to Main Content</a></div>
     <section class="navbar-fixed-top">
         <section class="top-nav hidden-xs">
             <div class="container">
@@ -46,16 +46,16 @@
                         <div class="useraccount clearfix">
                             <ul class="clearfix">
                                 <!--START: username-->
-                                <li><a href="/logout.asp"><span class="icon-logout"></span> [frame_logout-link-text]</a></li>
+                                <li><a href="/logout.asp"><span role="presentation" class="icon-logout"></span> [frame_logout-link-text]</a></li>
                                 <!--END: username-->
                                 <!--START: login-->
-                                <li><a href="/myaccount.asp"><span class="icon-login"></span> [frame_myaccount-link-text]</a></li>
+                                <li><a href="/myaccount.asp"><span role="presentation" class="icon-login"></span> [frame_myaccount-link-text]</a></li>
                                 <!--END: login-->
-                                <li><a href="/view_cart.asp"><span class="icon-basket"></span> [frame_shopping-cart-text] ([ITEMSINCART]) - [SUBTOTAL]</a></li>
+                                <li><a href="/view_cart.asp"><span role="presentation" class="icon-basket"></span> [frame_shopping-cart-text] ([ITEMSINCART]) - [SUBTOTAL]</a></li>
                                 <li>
                                     <a href="#" class="" data-toggle="modal" data-target="#searchModal">
                                         <span class="sr-only">Search</span>
-                                        <span class="icon-search"></span>
+                                        <span role="presentation" class="icon-search"></span>
                                     </a>
                                 </li>
                             </ul>
@@ -70,7 +70,7 @@
                 <div class="row">
 
                     <div class="col-md-3 col-sm-6 col-xs-8">
-                        <div class="logo">
+                        <div class="logo">                            
                             <!--START: global_header-->
                             <h3 class="store-name">[storename]</h3>
                             <h4 class="store-slogan">[storeslogan]</h4>
@@ -107,17 +107,17 @@
                     <div class="col-sm-6 col-xs-4 visible-sm visible-xs text-right head-mobile-nav">
                         <a href="#" class="hidden-sm" data-toggle="modal" data-target="#searchModal">
                             <span class="sr-only">Search</span>
-                            <span class="icon-search"></span>
+                            <span role="presentation" class="icon-search"></span>
                         </a>
                         <a href="#" id="mobile-menu-trigger">
-                            <span class="icon-menu"></span>
+                            <span role="presentation" class="icon-menu"></span>
                         </a>
                     </div>
 
                     <!--START: shopping_cart-->
                     <div id="floating-cart" class="floating-cart">
                         <a href="view_cart.asp" class="minicart-inner clearfix">
-                            <span class="icon-basket cart-icon"></span>
+                            <span role="presentation" class="icon-basket cart-icon"></span>
                             <span class="cart-details">
                                 <span class="minicart-items">[ITEMSINCART]</span> [frame_ITEMSINCART-text]
                             </span>
@@ -131,7 +131,7 @@
     <div class="header-push"></div>
 
     <!--Get current page template-->
-    [page_content]
+    <main id="page-content">[page_content]</main>
     <!--/Get current page template-->
 
 
@@ -149,29 +149,29 @@
                                 <ul class="list-unstyled list-inline">
                                    	<!--<li class="social-icons-label hidden-md hidden-sm hidden-xs">[frame_social-icons-heading]</li>-->
                                     <!--START: social_link_facebook-->
-                                    <li><a href="[social_link_facebook_url]" class="facebook" target="_blank" title="Like Us on Facebook"><span class="icon-facebook"></span></a></li>
-                                    <!--END: social_link_facebook-->
-                                    <!--START: social_link_twitter-->
-                                    <li><a href="[social_link_twitter_url]" class="twitter" target="_blank" title="Follow Us on Twitter"><span class="icon-twitter"></span></a></li>
-                                    <!--END: social_link_twitter-->
-                                    <!--START: social_link_googleplus-->
-                                    <li><a href="[social_link_googleplus_url]" class="gplus" target="_blank" title="Follow Us on Google+"><span class="icon-gplus"></span></a></li>
-                                    <!--END: social_link_googleplus-->
-                                    <!--START: social_link_youTube-->
-                                    <li><a href="[social_link_youTube_url]" class="youtube" target="_blank" title="Subscribe to our Channel"><span class="icon-youtube"></span></a></li>
-                                    <!--END: social_link_youTube-->
-                                    <!--START: social_link_pinterest-->
-                                    <li><a href="[social_link_pinterest_url]" class="pinterest" target="_blank" title="Follow Us on Pinterest"><span class="icon-pinterest"></span></a></li>
-                                    <!--END: social_link_pinterest-->
-                                    <!--START: social_link_instagram-->
-                                    <li><a href="[social_link_instagram_url]" class="instagram" target="_blank" title="Follow Us on Instagram"><span class="icon-instagram"></span></a></li>
-                                    <!--END: social_link_instagram-->
-                                    <!--START: social_link_tumblr-->
-                                    <li><a href="[social_link_tumblr_url]" class="tumblr" target="_blank" title="Follow Us on Tumblr"><span class="icon-tumblr"></span></a></li>
-                                    <!--END: social_link_tumblr-->
-                                    <!--START: social_link_blog-->
-                                    <li><a href="[social_link_blog_url]" class="blog" target="_blank" title="Subscribe to our Blog"><span class="icon-rss"></span></a></li>
-                                    <!--END: social_link_blog-->
+                            <li><a href="[social_link_facebook_url]" class="facebook" target="_blank" title="Like Us on Facebook" aria-label="Like Us on Facebook" role="button" rel="external noopener nofollow"><span class="icon-facebook" role="presentation"></span></a></li>
+                            <!--END: social_link_facebook-->
+                            <!--START: social_link_twitter-->
+                            <li><a href="[social_link_twitter_url]" class="twitter" target="_blank" title="Follow Us on Twitter" aria-label="Follow Us on Twitter" role="button" rel="external noopener nofollow"><span class="icon-twitter" role="presentation"></span></a></li>
+                            <!--END: social_link_twitter-->
+                            <!--START: social_link_googleplus-->
+                            <li><a href="[social_link_googleplus_url]" class="gplus" target="_blank" title="Follow Us on Google+" aria-label="Follow Us on Google+" role="button" rel="external noopener nofollow"><span class="icon-gplus" role="presentation"></span></a></li>
+                            <!--END: social_link_googleplus-->
+                            <!--START: social_link_youTube-->
+                            <li><a href="[social_link_youTube_url]" class="youtube" target="_blank" title="Subscribe to our Channel" aria-label="Subscribe to our Channel" role="button" rel="external noopener nofollow"><span class="icon-youtube" role="presentation"></span></a></li>
+                            <!--END: social_link_youTube-->
+                            <!--START: social_link_pinterest-->
+                            <li><a href="[social_link_pinterest_url]" class="pinterest" target="_blank" title="Follow Us on Pinterest" aria-label="Follow Us on Pinterest" role="button" rel="external noopener nofollow"><span class="icon-pinterest" role="presentation"></span></a></li>
+                            <!--END: social_link_pinterest-->
+                            <!--START: social_link_instagram-->
+                            <li><a href="[social_link_instagram_url]" class="instagram" target="_blank" title="Follow Us on Instagram" aria-label="Follow Us on Instagram" role="button" rel="external noopener nofollow"><span class="icon-instagram" role="presentation"></span></a></li>
+                            <!--END: social_link_instagram-->
+                            <!--START: social_link_tumblr-->
+                            <li><a href="[social_link_tumblr_url]" class="tumblr" target="_blank" title="Follow Us on Tumblr" aria-label="Follow Us on Tumblr" role="button" rel="external noopener nofollow"><span class="icon-tumblr" role="presentation"></span></a></li>
+                            <!--END: social_link_tumblr-->
+                            <!--START: social_link_blog-->
+                            <li><a href="[social_link_blog_url]" class="blog" target="_blank" title="Subscribe to our Blog" aria-label="Subscribe to our Blog" role="button" rel="external noopener nofollow"><span class="icon-rss" role="presentation"></span></a></li>
+                            <!--END: social_link_blog-->
                                 </ul>
                             </div>
                         </div>
@@ -182,9 +182,9 @@
                                 <form method="post" name="mailing" action="mailing_list_ajax.asp">
                                     <h3>[frame_mailinglist]</h3>
                                     <div class="mailinglist-form clearfix">
-                                        <input class="mailinglist-input form-control" type="text" name="email" placeholder="Enter your email address" autocomplete="off" />
+                                        <input class="mailinglist-input form-control" type="text" name="email" placeholder="Enter your email address" autocomplete="off" aria-required="true" aria-label="email address" aria-invalid="true"/>
                                         <button class="mailinglist-submit btn btn-default" type="submit" name="www">
-                                            <span id="mailing-btn-txt">Submit<i class="icon-right"></i></span>
+                                            <span id="mailing-btn-txt" aria-label="submit">Submit<i role="presentation" class="icon-right"></i></span>
                                             <span id="mailing-btn-load" class="mailing-btn-load icon-spin2 animate-spin hidden"></span>
                                         </button>
                                     </div>
@@ -194,9 +194,9 @@
                                     </div>
                                 </form>
                                 <div id="mailinglist-response" class="mailinglist-response">
-                                    <div class="mailinglist-error hidden"><span class="icon-attention"></span>[mailinglist_email-error]</div>
-                                    <div class="mailinglist-subscribed hidden"><span class="icon-ok"></span>[mailinglist_subscribe-success]</div>
-                                    <div class="mailinglist-unsubscribed hidden"><span class="icon-ok"></span>[mailinglist_unsubscribe-success]</div>
+                                    <div class="mailinglist-error hidden"><span role="presentation" class="icon-attention"></span>[mailinglist_email-error]</div>
+                                    <div class="mailinglist-subscribed hidden"><span role="presentation" class="icon-ok"></span>[mailinglist_subscribe-success]</div>
+                                    <div class="mailinglist-unsubscribed hidden"><span role="presentation" class="icon-ok"></span>[mailinglist_unsubscribe-success]</div>
                                 </div>
                             </div>
                             <div class="clearfix"></div>
@@ -238,7 +238,7 @@
         </div>
     </footer>
 
-    <a href="#" class="scrollToTop"><i class="icon-angle-up icon-2x"></i> <span>TOP</span></a>
+    <a href="#" class="scrollToTop"><i role="presentation" class="icon-angle-up icon-2x"></i> <span>TOP</span></a>
 
     <nav id="mobile-menu" class="mobile-menu">
         <div class="mobile-menu-inner">
@@ -272,10 +272,10 @@
                 </div>
                 <div class="modal-body">
                     <div id="searchBox" class="searchBox">
-                        <form method="get" name="searchForm" action="search.asp">
+                        <form method="get" name="searchForm" action="search.asp" role="search">
                             <div class="search-form">
-                                <input type="text" id="searchlight" name="keyword" value="" placeholder="[frame_search]" class="search-text form-control" />
-                                <button type="submit" class="search-submit btn btn-default btn-inverse"><span class="icon-search"></span></button>
+                                <input type="text" id="searchlight" name="keyword" value="" placeholder="[frame_search]" class="search-text form-control" aria-label="search input"/>
+                                <button type="submit" class="search-submit btn btn-default btn-inverse" aria-label="search button"><span role="presentation" class="icon-search"></span></button>
                             </div>
                         </form>
                         <div class="clear"></div>
@@ -297,7 +297,7 @@
 	<script src='assets/templates/common-core/lib/jquery-migrate-3.0.1.min.js'></script>
 	<script src="assets/templates/common-core/lib/bootstrap/js/bootstrap.js"></script>
 	<script src="assets/templates/common-core/js/core.js"></script>
-	<script src="assets/templates/[template]/js/main.js"></script>
+	<script src="assets/templates/[template]/js/main.js?v1"></script>
 	[page_scripts]
 	<!--END: page_scripts-->
 
