--- a/look-core/frame.html
+++ b/look-core/frame.html
@@ -7,24 +7,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2, user-scalable=yes">
     [META]
 
-    <!--START: FRAME_RSSFEEDS -->
+    <!--START: FRAME_RSSFEEDS-->
     <link rel="alternate" type="application/rss+xml" title="Featured Items (RSS 2.0)" href="[store_url]/rss.asp?type=home" />
     <link rel="alternate" type="application/rss+xml" title="Products On Sale (RSS 2.0)" href="[store_url]/rss.asp?type=onsale" />
     <link rel="alternate" type="application/rss+xml" title="New Releases (RSS 2.0)" href="[store_url]/rss.asp?type=newreleases" />
     <link rel="alternate" type="application/rss+xml" title="Best Sellers (RSS 2.0)" href="[store_url]/rss.asp?type=bestsellers" />
     <link rel="alternate" type="application/rss+xml" title="Latest Blog Posts (RSS 2.0)" href="[store_url]/rss.asp?type=blog" />
-    <!--END: FRAME_RSSFEEDS -->
+    <!--END: FRAME_RSSFEEDS-->
 
 	<!--START: page_styles-->
-	<link rel="stylesheet" href="assets/templates/common-core/lib/bootstrap/css/bootstrap.css" type="text/css" />
+	<link
+        rel="preload stylesheet"
+        href="assets/templates/common-core/lib/bootstrap/css/bootstrap.css"
+        as="style"
+        onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript>
+        <link
+            href="assets/templates/common-core/lib/bootstrap/css/bootstrap.css"
+            rel="stylesheet"
+            type="text/css"
+        />
+    </noscript>
 	<link rel="StyleSheet" href="assets/templates/common-core/css/core.css" type="text/css" />
 	[page_styles]
-	<link rel="StyleSheet" href="assets/templates/[template]/css/[stylesheet]" type="text/css" />
+	<link
+        rel="preload stylesheet"
+        href="assets/templates/[template]/css/[stylesheet]"
+        as="style"
+        onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript>
+        <link
+            href="assets/templates/[template]/css/[stylesheet]"
+            rel="stylesheet"
+            type="text/css"
+        />
+    </noscript>
 	<!--END: page_styles-->
 
 </head>
 <body class="[body_class]" data-currency="[currency_symbol]" data-decimal="[decimal_places]">
-    <div id="skip"><a href="#page-content">Skip to Main Content</a></div>
+    <div id="skip">
+        <a href="#site-header">Skip to Header</a>
+        <a href="#page-content">Skip to Main Content</a>
+        <a href="#site-footer">Skip to Footer</a>
+    </div>
     <section class="navbar-fixed-top">
         <section class="top-nav hidden-xs">
             <div class="container">
@@ -65,7 +93,7 @@
             </div>
         </section>
 
-        <header class="site-header">
+        <header class="site-header" id="site-header">
             <div class="container">
                 <div class="row">
 
@@ -109,7 +137,7 @@
                             <span class="sr-only">Search</span>
                             <span role="presentation" class="icon-search"></span>
                         </a>
-                        <a href="#" id="mobile-menu-trigger">
+                        <a href="#" id="mobile-menu-trigger" aria-label="button">
                             <span role="presentation" class="icon-menu"></span>
                         </a>
                     </div>
@@ -136,7 +164,7 @@
 
 
     <!-- FOOTER -->
-    <footer class="site-footer">
+    <footer class="site-footer antiCls" id="site-footer">
         <div class="container">
 
             <div class="row">
@@ -145,7 +173,7 @@
                         <!--START: social_icons-->
                         <div class="col-md-12 col-sm-6">
                             <div class="social-icons">
-                                <h3>Follow Us</h3>
+                                <h2>Follow Us</h2>
                                 <ul class="list-unstyled list-inline">
                                    	<!--<li class="social-icons-label hidden-md hidden-sm hidden-xs">[frame_social-icons-heading]</li>-->
                                     <!--START: social_link_facebook-->
@@ -180,7 +208,7 @@
                         <div class="col-md-12 col-sm-6">
                             <div class="mailist-box ajax-mailinglist" data-callfront="mailinglist_callfront" data-callback="mailinglist_response">
                                 <form method="post" name="mailing" action="mailing_list_ajax.asp">
-                                    <h3>[frame_mailinglist]</h3>
+                                    <h2>[frame_mailinglist]</h2>
                                     <div class="mailinglist-form clearfix">
                                         <input class="mailinglist-input form-control" type="text" name="email" placeholder="Enter your email address" autocomplete="off" aria-required="true" aria-label="email address" aria-invalid="true"/>
                                         <button class="mailinglist-submit btn btn-default" type="submit" name="www">
@@ -285,19 +313,53 @@
         </div>
     </div>
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
-    <link rel="StyleSheet" href="assets/templates/common-core/lib/fontello/css/fontello.css" type="text/css" />
-    <link rel="StyleSheet" href="assets/templates/common-core/lib/fontello/css/animation.css" type="text/css" />
-    <link rel="stylesheet" href="/assets/templates/common-core/lib/animate-me/animate.css" type="text/css" media="screen" />
+    <link
+        rel="preload stylesheet"
+        href="assets/templates/common-core/lib/fontello/css/fontello.min.css"
+        as="style"
+        onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript>
+        <link
+            href="assets/templates/common-core/lib/fontello/css/fontello.min.css"
+            rel="stylesheet"
+            type="text/css"
+        />
+    </noscript>
+    <link
+        rel="preload stylesheet"
+        href="assets/templates/common-core/lib/fontello/css/animation.css"
+        as="style"
+        onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript>
+        <link
+            href="assets/templates/common-core/lib/fontello/css/animation.css"
+            rel="stylesheet"
+            type="text/css"
+        />
+    </noscript>
+    <link
+        rel="preload stylesheet"
+        href="/assets/templates/common-core/lib/animate-me/animate.css"
+        as="style"
+        onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript>
+        <link
+            href="/assets/templates/common-core/lib/animate-me/animate.css"
+            rel="stylesheet"
+            type="text/css"
+        />
+    </noscript>
 
 	
 	<!--START: page_scripts-->
-	<script src='assets/templates/common-core/lib/jquery.min.js'></script>
-	<script src='assets/templates/common-core/lib/jquery-migrate-3.0.1.min.js'></script>
-	<script src="assets/templates/common-core/lib/bootstrap/js/bootstrap.js"></script>
-	<script src="assets/templates/common-core/js/core.js"></script>
-	<script src="assets/templates/[template]/js/main.js?v1"></script>
+	<script src="assets/templates/common-core/lib/jquery.min.js"></script>
+	<script src="assets/templates/common-core/lib/jquery-migrate-3.0.1.min.js"></script>
+	<script src="assets/templates/common-core/lib/bootstrap/js/bootstrap.js" defer="defer"></script>
+	<script src="assets/templates/common-core/js/core.js" defer="defer"></script>
+	<script src="assets/templates/[template]/js/main.js" defer="defer"></script>
 	[page_scripts]
 	<!--END: page_scripts-->
 
@@ -312,33 +374,37 @@
     <!--END: quicksearch-->
 
 <!--START: 3dcart stats-->
-<div class="stats hidden"> 
-    <script type="text/javascript">
-        //<![CDATA[
+<div id="3dStats" class="stats hidden"> 
+    <script async language="JavaScript" type="text/javascript">
         var file='/stats/count.asp';
-        var stats_d=new Date();
-        var stats_s=stats_d.getSeconds();
+        var stats_d=new Date(); 
+        var stats_s=stats_d.getSeconds(); 
         var stats_m=stats_d.getMinutes();
         var stats_x=stats_s*stats_m;
         var prdID = '[catalogid]';
         var catID = '[catid]';
+        var stImg = document.createElement('img');
+            stImg.Class
+            stImg.width = '1';
+            stImg.height = '1';
+            stImg.alt = "3dcart stats";
+
         stats_f='' + escape(document.referrer); stats_f=stats_f.replace('_','----');
-        if (navigator.appName=='Netscape'){stats_b='NS';}
-        if (navigator.appName=='Microsoft Internet Explorer'){stats_b='MSIE';}
+        if (navigator.appName=='Netscape'){stats_b='NS';} 
+        if (navigator.appName=='Microsoft Internet Explorer'){stats_b='MSIE';} 
         if (navigator.appVersion.indexOf('MSIE 3')>0) {stats_b='MSIE';}
-        stats_u='' + escape(document.URL); stats_u=stats_u.replace('_','----'); stats_w=screen.width; stats_h=screen.height;
-        stats_v=navigator.appName;
+        stats_u='' + escape(document.URL); stats_u=stats_u.replace('_','----'); stats_w=screen.width; stats_h=screen.height; 
+        stats_v=navigator.appName; 
         stats_fs = window.screen.fontSmoothingEnabled;
         if (stats_v != 'Netscape') {stats_c=screen.colorDepth;}
         else {stats_c=screen.pixelDepth;}
         stats_j=navigator.javaEnabled();
         info='w=' + stats_w + '&h=' + stats_h + '&c=' + stats_c + '&r=' + stats_f + '&u='+ stats_u + '&fs=' + stats_fs + '&b=' + stats_b + '&x=' + stats_x + '&cat=' + catID + '&prd=' + prdID;
-        document.write('<img src="' + file + '?'+info+ '" width="1" height="1" border="0" alt="stats" />');
-        //]]>
+
+        stImg.src =file + '?' + info; 
+        document.getElementById('3dStats').appendChild(stImg);
     </script>
-    <noscript>
-        <img src="/stats/count.asp" width="90" height="30" alt="" />
-    </noscript>
+    <noscript><img src="/stats/count.asp" width="90" height="30" alt="3dcart stats" /> </noscript>
 </div>
 <!--END: 3dcart stats-->
 
