--- a/look-core/frame.html
+++ b/look-core/frame.html
@@ -80,7 +80,7 @@
                                 <li><a href="/myaccount.asp"><span role="presentation" class="icon-login"></span> [frame_myaccount-link-text]</a></li>
                                 <!--END: login-->
                                 <li><a href="/view_cart.asp"><span role="presentation" class="icon-basket"></span> [frame_shopping-cart-text] ([ITEMSINCART]) - [SUBTOTAL]</a></li>
-                                <li>
+                                <li class="searchHide">
                                     <a href="#" class="" data-toggle="modal" data-target="#searchModal">
                                         <span class="sr-only">Search</span>
                                         <span role="presentation" class="icon-search"></span>
@@ -133,7 +133,7 @@
                     </div>
 
                     <div class="col-sm-6 col-xs-4 visible-sm visible-xs text-right head-mobile-nav">
-                        <a href="#" class="hidden-sm" data-toggle="modal" data-target="#searchModal">
+                        <a href="#" class="hidden-sm searchHide" data-toggle="modal" data-target="#searchModal">
                             <span class="sr-only">Search</span>
                             <span role="presentation" class="icon-search"></span>
                         </a>
@@ -289,6 +289,7 @@
     <!--END: quickview_modal-->
 
     <!-- Modal -->
+    <!--START: FRAME_SEARCH-->
     <div class="modal fade" id="searchModal" tabindex="-1" role="dialog" aria-labelledby="searchModal" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -312,6 +313,8 @@
             </div>
         </div>
     </div>
+    <style>.searchHide{display:inline-block !important}</style>
+    <!--END: FRAME_SEARCH-->
 
     <link
         rel="preload stylesheet"
